# pong-ecs

./: CMakeLists.txt  build.sh  github.sh  run.sh
src/: Misc.h  Static.h  main.cpp
src/Console/: CMakeLists.txt  ConsoleMessage.cpp  ConsoleMessage.h
src/Controller/: Controller.cpp  Controller.h
src/Coords/: CMakeLists.txt  Coordinates.cpp  Coordinates.h
src/Entity/: CMakeLists.txt  Collider.cpp  Collider.h  ControllableEntity.cpp  ControllableEntity.h  Entity.cpp  Entity.h
src/Error/: Error.cpp  Error.h
src/Events/: CMakeLists.txt  Event.cpp  Event.h  EventManager.cpp  EventManager.h
src/Game/: CMakeLists.txt  Game.cpp  Game.h  GameController.cpp  GameController.h
src/Loop/: Loop.cpp  Loop.h
src/Misc/: CMakeLists.txt  Misc.cpp
src/Screen/: CMakeLists.txt  Layer.cpp  Layer.h  Screen.cpp  Screen.h
src/Static/: Static.h
src/Structs/: Borrowed.cpp  Borrowed.h  CMakeLists.txt  Geometry.cpp  Geometry.h  HierarchyTree.h
src/Systems/: CMakeLists.txt  MovementSystems.cpp  SystemsManager.cpp  SystemsManager.h
src/Time/: CMakeLists.txt  Time.cpp  Time.h
